--- a/package.json
+++ b/package.json
@@ -2,7 +2,20 @@
   "name": "tunnel-ssh-server",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "1.18.2",
+    "cookie-parser": "1.4.3",
+    "debug": "3.1.0",
+    "ejs": "2.5.7",
+    "express": "4.16.2",
+    "morgan": "1.9.0",
+    "serve-favicon": "2.4.5"
+  },
   "repository": "https://github.com/fetaoily/tunnel-ssh-server.git",
   "author": "fangertao <fetaoily@foxmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "private": true
 }
