--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ejs": "2.5.7",
     "express": "4.16.2",
     "morgan": "1.9.0",
-    "serve-favicon": "2.4.5"
+    "serve-favicon": "2.4.5",
+    "tunnel-ssh": "4.1.3"
   },
   "repository": "https://github.com/fetaoily/tunnel-ssh-server.git",
   "author": "fangertao <fetaoily@foxmail.com>",
