--- a/package.json
+++ b/package.json
@@ -11,9 +11,50 @@
     "debug": "3.1.0",
     "ejs": "2.5.7",
     "express": "4.16.2",
+    "log": "^1.4.0",
     "morgan": "1.9.0",
     "serve-favicon": "2.4.5",
     "tunnel-ssh": "4.1.3"
+  },
+  "config": {
+    "proxyTable": [
+      {
+        "dstHost": "127.0.0.1",
+        "dstPort": 8080,
+        "localHost": "0.0.0.0",
+        "localPort": 8080
+      },
+      {
+        "dstHost": "127.0.0.1",
+        "dstPort": 3306,
+        "localHost": "127.0.0.1",
+        "localPort": 3306
+      },
+      {
+        "dstHost": "127.0.0.1",
+        "dstPort": 27017,
+        "localHost": "127.0.0.1",
+        "localPort": 27017
+      },
+      {
+        "dstHost": "127.0.0.1",
+        "dstPort": 9200,
+        "localHost": "127.0.0.1",
+        "localPort": 9200
+      },
+      {
+        "dstHost": "127.0.0.1",
+        "dstPort": 9300,
+        "localHost": "127.0.0.1",
+        "localPort": 9300
+      },
+      {
+        "dstHost": "127.0.0.1",
+        "dstPort": 5601,
+        "localHost": "127.0.0.1",
+        "localPort": 5601
+      }
+    ]
   },
   "repository": "https://github.com/fetaoily/tunnel-ssh-server.git",
   "author": "fangertao <fetaoily@foxmail.com>",
