--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "4.16.2",
     "log": "^1.4.0",
     "morgan": "1.9.0",
+    "opn": "5.2.0",
     "serve-favicon": "2.4.5",
     "tunnel-ssh": "4.1.3"
   },
