--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 stop tunnel-ssh-server",
+    "log": "pm2 log tunnel-ssh-server"
   },
   "dependencies": {
     "body-parser": "1.18.2",
